
---------------------------------  
1.0.4-beta - 06-Feb-2013
---------------------------------
Changes:
	* Enhanced identification process to use alternate covers from ComicVine
	* Page and cover view mini-browser available throughout app.  Most images can be
         double-clicked for embiggened view	
	* Misc GUI Tweaks

---------------------------------  
1.0.3-beta - 31-Jan-2013
---------------------------------
Changes:
	Misc bug fixes and enhancements
	
---------------------------------  
1.0.2-beta - 25-Jan-2013
---------------------------------
Changes:
	More verbose logging during auto-tag
	Added %month% and %month_name% for renaming
	Better parsing of volume numbers in file name
Bugs:
	Better exception handling with corrupted image data
	Fixed issues with RAR reading on OS X
	Other minor bug fixes
	
---------------------------------  
1.0.1-beta - 24-Jan-2013
---------------------------------
Bug Fix:
	Fixed an issue where unicode strings can't be printed to OS X Console

---------------------------------  
1.0.0-beta - 23-Jan-2013
---------------------------------
Version 1!  New multi-file processing in GUI!

GUI Changes:
  Open multiple files and/or folders via drag/drop or file dialog
  File management list for easy viewing and selection
  Batch tag remove
  Batch export as zip
  Batch rename
  Batch tag copy
  Batch auto-tag (automatic identification and save!)
  
---------------------------------  
0.9.5-beta - 16-Jan-2013
---------------------------------
Changes:
  Added CLI option to search by comicvine issue ID
  Some image loading optimizations
  Bug Fix:  Some CBL fields that should have been ints were written as strings

---------------------------------  
0.9.4-beta - 7-Jan-2013
---------------------------------
Changes:
  Better handling of non-ascii characters in filenames and data
  Add CBL Transform to copy Web Link and Notes to comments
  Minor bug fixes

---------------------------------  
0.9.3-beta - 19-Dec-2012